REGRESSION (r245396): Page load time performance regression https://bugs.webkit.org/show_bug.cgi?id=198382

Reviewed by Simon Fraser.

Delay the scheduling of a rendering update by 500ms when a new
IntersectionObserver target is added during page load. This addresses
a page load time regression from r245396, which immediately scheduled a
rendering update when a target is added. Note that even with this change,
if anything else triggers a rendering update before the 500ms delay expires,
intersection observations will be updated during that rendering update.

Covered by intersection-observer/initial-observation.html

* dom/Document.cpp:
(WebCore::Document::updateIntersectionObservations):
(WebCore::Document::scheduleInitialIntersectionObservationUpdate):
* dom/Document.h:
* page/IntersectionObserver.cpp:
(WebCore::IntersectionObserver::observe):


Canonical link: https://commits.webkit.org/212435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245958 268f45cc-cd09-0410-ab3c-d52691b4dbfc